# StudyPlaner

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_BACKLOG.md  README.md  StudyOS.html  package.json  wrangler.jsonc
.claude/agents/: main.md
agents/: main.md
backend/: README.md  pyproject.toml  wrangler.toml
backend/data/: courses.json
backend/migrations/: 0001_initial.sql  0002_regulation_model.sql  0003_seed_regulations.sql  0004_user_accounts.sql  0005_progress_categories.sql  0006_seed_progress_categories.sql  0009_fix_bsc_info_rule_group_ects.sql  0010_seed_official_po2021_programs.sql  0011_remove_legacy_regulation_access.sql  0012_merge_bsc_info_math_into_inf.sql  0013_completed_course_regulation_assignment.sql  0014_planner_mobile_preferences.sql  0016_rename_visualization_categories.sql  0017_add_cloud_dev_category.sql
backend/scripts/: export_sqlite_to_d1.py  (+2 more)
data_collection/: QUICKSTART.md  SETUP.md  pyproject.toml
data_collection/alma/: __init__.py  cli.py  scraper.py
docs/: authentication.md  cloudflare-development.md  cloudflare-setup.md  cloudflare-test-plan.md  mock-data-status.md  progress-visualization-categories.md  regulation-model.md  repo-audit.md  transcript-import-scope.md
einzupflegene_po/: bsc_bioinformatik_po2021.json  bsc_informatik_po2021.json  bsc_medieninformatik_po2021.json  bsc_medizininformatik_po2021.json  msc_informatik_po2021.json  msc_machine_learning_po2021.json
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+104 files in other folders)
